rust_core/core/src/telemetry/snapshots/ai_ops_core__telemetry__memory__tests__container_reports_cgroup_limit.snap
---
source: rust_core/core/src/telemetry/memory.rs
expression: snapshot
---
{
  "timestamp": "2026-01-01T00:00:00Z",
  "total_bytes": {
    "state": "SUPPORTED",
    "value": 2147483648
  },
  "used_bytes": {
    "state": "SUPPORTED",
    "value": 858993459
  },
  "available_bytes": {
    "state": "SUPPORTED",
    "value": 1288490189
  },
  "cached_bytes": {
    "state": "SUPPORTED",
    "value": 2031878144
  },
  "buffers_bytes": {
    "state": "SUPPORTED",
    "value": 101285888
  },
  "swap_total_bytes": {
    "state": "SUPPORTED",
    "value": 4088393728
  },
  "swap_used_bytes": {
    "state": "SUPPORTED",
    "value": 1060904960
  },
  "swap_free_bytes": {
    "state": "SUPPORTED",
    "value": 3027488768
  },
  "pressure": "ELEVATED",
  "containerized": true,
  "numa_nodes": {
    "state": "UNAVAILABLE",
    "reason": "NUMA node topology not exposed on this host"
  }
}
